src/objects/TriggerHandlerAccess__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handler_Name__c</fullName>
        <label>Handler Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TriggerHandlerAccess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Active__c</columns>
        <columns>Handler_Name__c</columns>
        <columns>Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>